moved bead bar and peak detector shape to responsive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
   <script src= "js/jquery.js"></script>
   <script src= "js/main.js"></script>
-  <script src= "js/helperFunction.js"></script>
+  <!-- <script src= "js/helperFunction.js"></script>
+  <script src= "js/starfield.js"></script> -->
   <!-- <script src= "js/web_audio.js"></script> -->
 
 </body>
