--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Audio Art 2</title>
   <link rel="stylesheet" href="css/style.css">
+  <style>@import url('https://fonts.googleapis.com/css?family=Cabin|Monoton|Paytone+One');</style>
   <script src= "p5/p5.js"></script>
   <script src= "p5/addons/p5.dom.js"></script>
   <script src= "p5/addons/p5.sound.js"></script>
