--- a/index.html
+++ b/index.html
@@ -27,18 +27,15 @@
     <audio id="mic" src=""></audio>
     <div id="audio_canvas"></div>
 
-
-
     <div class="songControls">
         <a><img src="./assets/Mic.png" alt="Microphone" id="microphone" class="fas fa-microphone" width="100" height="100"></a>
 
-        <i><img src="/assets/play1.png" alt="Play-Stop" id="play-stop" class="fas fa-play" width="100" height="100"></i>
+        <a><img src="/assets/play1.png" alt="Play-Stop" id="play-stop" class="fas fa-play" width="100" height="100"></a>
     </div>
 
 
   <script src= "js/jquery.js"></script>
   <script src= "js/main.js"></script>
-  <!-- <script src= "js/helperFunction.js"></script>
 
 
 </body>
