--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="songControls">
         <a><img src="./assets/Mic.png" alt="Microphone" id="microphone" class="fas fa-microphone" width="100" height="100"></a>
 
-        <a><img src="/assets/play.png" alt="Play-Stop" id="play-stop" class="fas fa-play" width="100" height="100"></a>
+        <a><img src="/assets/play.png" alt="Play" id="play" class="fas fa-play" width="100" height="100"></a>
     </div>
 
 
